--- a/app/pages/agenda/agenda.html
+++ b/app/pages/agenda/agenda.html
@@ -3,6 +3,11 @@
 		<ion-icon name="menu"></ion-icon>
 	</button>
 	<ion-title>Agenda</ion-title>
+	<ion-buttons end>
+		<button (click)="addEntry()">
+			<ion-icon name="add"></ion-icon>
+		</button>
+	</ion-buttons>
 </ion-navbar>
 
 
