--- a/app/pages/forms/lesson.html
+++ b/app/pages/forms/lesson.html
@@ -14,6 +14,7 @@
 				<ion-label>{{"lesson.date" | translate}}</ion-label>
 				<ion-input type="date" [(ngModel)]="lesson.date"></ion-input>
 			</ion-item>
+			{{lesson.date}}
 			<ion-item>
 				<ion-label>{{"lesson.duration" | translate}}</ion-label>
 				<ion-input type="number" [(ngModel)]="lesson.duration"></ion-input>
