--- a/app/pages/forms/lesson.html
+++ b/app/pages/forms/lesson.html
@@ -12,7 +12,7 @@
 		<ion-list>
 			<ion-item>
 				<ion-label>{{"lesson.date" | translate}}</ion-label>
-				<ion-input type="date" [(ngModel)]="lesson.date" required></ion-input>
+				<ion-input type="datetime-local" [(ngModel)]="lesson.date" required></ion-input>
 			</ion-item>
 			<!--<ion-item>
 				<ion-label>{{"lesson.date" | translate}} <em>ion-datetime</em></ion-label>
