Internationalize price display format in lesson detail

--- a/app/pages/agenda/agenda-detail.html
+++ b/app/pages/agenda/agenda-detail.html
@@ -15,7 +15,7 @@
 
 	<p>{{entry.startReadable}} - {{entry.endReadable}}</p>
 	<p><em>{{entry.durationReadable}}</em></p>
-	<p>{{"agenda.price_colon" | translate}} {{entry.student.price}} RMB</p>
+	<p>{{"agenda.price_colon" | translate}} {{price}}</p>
 
 	<div padding>
 		<button block secondary (click)="edit()">{{"agenda.edit" | translate}}</button>
