Updates in modify/delete lesson. Modify not completed yet: it has to properly apply updates to the previous view.

--- a/app/pages/forms/lesson.html
+++ b/app/pages/forms/lesson.html
@@ -41,7 +41,7 @@
 		</ion-list>
 
 		<div padding>
-			<button block primary type="submit">{{"lesson.validate" | translate}}</button>
+			<button block primary type="submit">{{ (edit ? "lesson.validateEdit" : "lesson.validateAdd") | translate}}</button>
 		</div>
 	</form>
 
