update meta content security to include fonts

--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="msapplication-tap-highlight" content="no">
 	<meta http-equiv="Content-Security-Policy"
-		  content="default-src *; style-src &apos;self&apos; &apos;unsafe-inline&apos;; script-src * &apos;unsafe-inline&apos; &apos;unsafe-eval&apos;; img-src &apos;self&apos; data: *">
+		  content="default-src *; style-src &apos;self&apos; &apos;unsafe-inline&apos;; script-src * &apos;unsafe-inline&apos; &apos;unsafe-eval&apos;; img-src &apos;self&apos; data: *; font-src &apos;self&apos; data: *">
 
 	<link ios-href="build/css/app.ios.css" rel="stylesheet">
 	<link md-href="build/css/app.md.css" rel="stylesheet">
