Can add/edit students and lessons synced with firebase

--- a/app/pages/agenda/agenda.html
+++ b/app/pages/agenda/agenda.html
@@ -4,7 +4,7 @@
 	</button>
 	<ion-title><ion-input type="date" [(ngModel)]="currentDate"></ion-input></ion-title>
 	<ion-buttons end>
-		<button (click)="addEntry()">
+		<button (click)="popAddList($event)">
 			<ion-icon name="add"></ion-icon>
 		</button>
 	</ion-buttons>
