--- a/app/app.html
+++ b/app/app.html
@@ -14,4 +14,4 @@
 
 </ion-menu>
 
-<ion-nav id="nav" [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
