--- a/app/app.html
+++ b/app/app.html
@@ -1,16 +1,19 @@
 <ion-menu [content]="content">
 
-  <ion-toolbar>
-    <ion-title>Pages</ion-title>
-  </ion-toolbar>
+	<ion-toolbar>
+		<ion-title>Pages</ion-title>
+	</ion-toolbar>
 
-  <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
-    </ion-list>
-  </ion-content>
+	<ion-content>
+		<ion-list>
+			<button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+				{{p.title}}
+			</button>
+			<button menuClose ion-item (click)="logout()">
+				{{'auth.logout' | translate}}
+			</button>
+		</ion-list>
+	</ion-content>
 
 </ion-menu>
 
