--- a/app/pages/forms/auth.html
+++ b/app/pages/forms/auth.html
@@ -1,8 +1,5 @@
 <ion-navbar *navbar>
-	<button menuToggle>
-		<ion-icon name="menu"></ion-icon>
-	</button>
-	<ion-title>{{ (edit ? "lesson.edit" : "lesson.add") | translate }}</ion-title>
+	<ion-title>{{ "auth.title" | translate }}</ion-title>
 </ion-navbar>
 
 
