Almost ready to work with auth. Reset password has an issue. Waiting for a viable upgrade of angularfire2

--- a/app/pages/forms/change-password.html
+++ b/app/pages/forms/change-password.html
@@ -11,22 +11,31 @@
 		<ion-list>
 			<ion-item>
 				<ion-label floating>{{ "auth.oldPassword" | translate }}</ion-label>
-				<ion-input type="password" required ngControl="oldPassword"></ion-input>
+				<ion-input type="password" ngControl="oldPassword" required></ion-input>
 			</ion-item>
 			<ion-item>
 				<ion-label floating>{{ "auth.newPassword" | translate }}</ion-label>
-				<ion-input type="password" required ngControl="newPassword"></ion-input>
+				<ion-input type="password" ngControl="newPassword" required></ion-input>
 			</ion-item>
 			<ion-item>
 				<ion-label floating>{{ "auth.confirmPassword" | translate }}</ion-label>
-				<ion-input type="password" required ngControl="confirmPassword"></ion-input>
-				<!--*ngIf="confirmPassword.control.touched"-->
-				<div class='error' *ngIf="changePasswordForm.hasError('differentPasswords')">
-					<div>{{ "auth.differentPasswords" | translate }}</div>
-				</div>
+				<ion-input type="password" ngControl="confirmPassword" required></ion-input>
 			</ion-item>
-			<button block primary type="submit" [disabled]="loading">{{ (signUpMode ? "auth.signup" : "auth.signin") | translate }}</button>
+			<!-- && changePasswordForm.controls['confirmPassword'].value-->
+			<!-- && changePasswordForm.controls['confirmPassword'].touched-->
+			<div class="item error" *ngIf="changePasswordForm.hasError('differentPasswords') && changePasswordForm.controls['confirmPassword'].value">
+				{{ "auth.differentPasswords" | translate }}
+			</div>
 		</ion-list>
+		<div padding>
+			<button block primary type="submit" [disabled]="loading || !changePasswordForm.valid">{{ (signUpMode ?
+				"auth.signup" : "auth.validateChange") | translate }}
+			</button>
+		</div>
+		<div padding *ngIf="password.isTemporaryPassword">
+			<button block secondary (click)="resendPassword()" type="button" [disabled]="loading">{{ "auth.resendPassword" | translate }}
+			</button>
+		</div>
 	</form>
 
 </ion-content>
