--- a/app/pages/forms/auth.html
+++ b/app/pages/forms/auth.html
@@ -1,24 +1,27 @@
 <ion-navbar *navbar>
 
 	<ion-segment [(ngModel)]="signUpMode">
-		<ion-segment-button [value]="false">
+		<ion-segment-button [value]="''">
 			{{ "auth.signin" | translate }}
 		</ion-segment-button>
-		<ion-segment-button [value]="true">
+		<ion-segment-button [value]="'signup'">
 			{{ "auth.signup" | translate }}
+		</ion-segment-button>
+		<ion-segment-button [value]="'forgot'">
+			{{ "auth.forgot" | translate }}
 		</ion-segment-button>
 	</ion-segment>
 
 	<!--<ion-title>{{ "auth.title" | translate }}</ion-title>-->
 	<ion-buttons end>
-		<ion-spinner *ngIf="authenticating"></ion-spinner>
+		<ion-spinner *ngIf="loading"></ion-spinner>
 	</ion-buttons>
 </ion-navbar>
 
 
 <ion-content class="lesson-form">
 
-	<form #loginCreds="ngForm" (submit)="loginWithEmail(loginCreds.value)">
+	<form *ngIf="signUpMode !== 'forgot'" #loginCreds="ngForm" (submit)="loginWithEmail(loginCreds.value)">
 		<ion-list>
 			<ion-item>
 				<ion-label>{{ "auth.email" | translate }}</ion-label>
@@ -28,19 +31,40 @@
 				<ion-label *ngIf="!signUpMode">{{ "auth.password" | translate }}</ion-label>
 				<ion-input *ngIf="!signUpMode" type="password" required ngControl="password"></ion-input>
 			</ion-item>
-			<!--<ion-row>-->
-				<!--<ion-col>-->
-					<button block secondary type="submit" [disabled]="authenticating">{{ (signUpMode ? "auth.signup" : "auth.signin") | translate }}</button>
-				<!--</ion-col>-->
-				<!--<ion-col width-50><button block primary type="submit" (click)="signup()" [disabled]="authenticating">Sign up</button></ion-col>-->
-			<!--</ion-row>-->
 		</ion-list>
+		<div padding>
+			<button block primary type="submit" [disabled]="loading || !loginCreds.valid">{{ (signUpMode ? "auth.signup" :
+				"auth.signin") | translate }}
+			</button>
+		</div>
 	</form>
-	<form class="center" (submit)="loginWithGithub()">
+	<form *ngIf="signUpMode === ''" class="center" (submit)="loginWithGithub()">
 		<h2>{{'auth.withProvider' | translate}}</h2>
-		<button type="submit" [disabled]="authenticating" provider>
+		<button type="submit" [disabled]="loading" provider>
 			<ion-icon name="logo-github"></ion-icon>{{'auth.github' | translate}}
 		</button>
 	</form>
+
+
+	<form *ngIf="signUpMode === 'forgot'" #resetForm="ngForm" (submit)="resetPassword(resetForm.value)">
+		<p class="center">{{ "auth.forgotFull" | translate }}</p>
+		<ion-list>
+			<ion-item>
+				<ion-label>{{ "auth.email" | translate }}</ion-label>
+				<ion-input type="email" required ngControl="email"></ion-input>
+			</ion-item>
+		</ion-list>
+		<div padding>
+			<button block secondary type="submit" [disabled]="loading || !resetForm.valid">{{ "auth.resetPassword" | translate }}
+			</button>
+		</div>
+	</form>
+
+
+	<!--<div *ngIf="signUpMode === 'forgot'" padding>
+		<p class="center">{{ "auth.forgotFull" | translate }}</p>
+		<button block secondary type="button" (click)="resetPassword()" [disabled]="loading">{{ "auth.resetPassword" | translate }}
+		</button>
+	</div>-->
 
 </ion-content>
