--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" manifest="my.appcache">
 <head>
 	<meta charset="UTF-8">
 	<title>Teacher Agenda</title>
@@ -9,6 +9,8 @@
 	<meta name="msapplication-tap-highlight" content="no">
 	<meta http-equiv="Content-Security-Policy"
 		  content="default-src *; style-src &apos;self&apos; &apos;unsafe-inline&apos;; script-src * &apos;unsafe-inline&apos; &apos;unsafe-eval&apos;; img-src &apos;self&apos; data: *; font-src &apos;self&apos; data: *">
+	<meta name="mobile-web-app-capable" content="yes" />
+	<link rel="manifest" href="manifest.json">
 
 	<link ios-href="build/css/app.ios.css" rel="stylesheet">
 	<link md-href="build/css/app.md.css" rel="stylesheet">
