Add offline support

--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" manifest="my.appcache">
+<html manifest="my.appcache">
 <head>
 	<meta charset="UTF-8">
 	<title>Teacher Agenda</title>
