--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 	<meta name="msapplication-tap-highlight" content="no">
 	<meta http-equiv="Content-Security-Policy"
 		  content="default-src *; style-src &apos;self&apos; &apos;unsafe-inline&apos;; script-src * &apos;unsafe-inline&apos; &apos;unsafe-eval&apos;; img-src &apos;self&apos; data: *; font-src &apos;self&apos; data: *">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="mobile-web-app-capable" content="yes" />
 	<link rel="manifest" href="manifest.json">
 
