--- a/app/pages/agenda/agenda-list.html
+++ b/app/pages/agenda/agenda-list.html
@@ -6,6 +6,7 @@
 			<div [ngStyle]="{'padding-top': entry.marginTopBottom, 'padding-bottom': entry.marginTopBottom}">{{entry.student.name}}</div>
 			<ion-badge *ngIf="entry.student" item-right><!--{{entry.start.format('L')}} -->{{entry.startReadable}} - {{entry.endReadable}}</ion-badge>
 			<!--secondary-->
+			<!--<ion-checkbox dark checked="true"></ion-checkbox>-->
 		</button>
 		<!--<span *ngIf="entry.student && !entry.adjacent" class="start-time">{{entry.startReadable}}</span>
         <span *ngIf="entry.student" class="end-time">{{entry.endReadable}}</span>-->
