Change default value for frequency: weekly + start adding the cancel lesson button

--- a/app/pages/agenda/agenda-detail.html
+++ b/app/pages/agenda/agenda-detail.html
@@ -17,6 +17,9 @@
 	<p>{{"agenda.from" | translate}} {{entry.dateReadable}}</p>
 	<p *ngIf="entry.repetition">{{entry.repetitionReadable}} <span *ngIf="entry.repetEnd">{{"agenda.until" | translate}} {{entry.repetEndReadable}} {{"agenda.included" | translate}}</span></p>
 
+	<!--<div padding>
+		<button block danger (click)="cancel()">{{"agenda.cancelLesson" | translate}}</button>
+	</div>-->
 	<div padding>
 		<button block secondary (click)="edit()">{{"agenda.edit" | translate}}</button>
 	</div>
