--- a/app/pages/agenda/agenda-detail.html
+++ b/app/pages/agenda/agenda-detail.html
@@ -2,7 +2,7 @@
 	<button menuToggle>
 		<ion-icon name="menu"></ion-icon>
 	</button>
-	<ion-title>{{entry.student.name}}</ion-title>
+	<ion-title>{{entry?.student?.name}}</ion-title>
 	<ion-buttons end>
 		<button (click)="remove()">{{"agenda.remove" | translate}}</button>
 	</ion-buttons>
