lesson form: Add validation (block submit button if non-filled required inputs)

--- a/app/pages/forms/change-password.html
+++ b/app/pages/forms/change-password.html
@@ -7,7 +7,7 @@
 
 <ion-content>
 
-	<form [ngFormModel]="changePasswordForm" #loginCreds="ngForm" (submit)="changePassword(changePasswordForm.value)">
+	<form [ngFormModel]="changePasswordForm" (submit)="changePassword(changePasswordForm.value)">
 		<ion-list>
 			<ion-item>
 				<ion-label floating>{{ "auth.oldPassword" | translate }}</ion-label>
