--- a/www/index.html
+++ b/www/index.html
@@ -9,9 +9,16 @@
 	<meta name="msapplication-tap-highlight" content="no">
 	<meta http-equiv="Content-Security-Policy"
 		  content="default-src *; style-src &apos;self&apos; &apos;unsafe-inline&apos;; script-src * &apos;unsafe-inline&apos; &apos;unsafe-eval&apos;; img-src &apos;self&apos; data: *; font-src &apos;self&apos; data: *">
+
+	<!--Mobile: installed webapp support-->
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="mobile-web-app-capable" content="yes" />
 	<link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" href="resources/ios/icon/icon-60.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="resources/ios/icon/icon-76.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="resources/ios/icon/icon-60@2x.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="resources/ios/icon/icon-76@2x.png">
+	<link rel="apple-touch-startup-image" href="resources/ios/splash/Default-736h.png">
 
 	<link ios-href="build/css/app.ios.css" rel="stylesheet">
 	<link md-href="build/css/app.md.css" rel="stylesheet">
