--- a/app/pages/students/student-detail.html
+++ b/app/pages/students/student-detail.html
@@ -13,6 +13,7 @@
 
 	<!--<p><em>{{"student.name_colon" | translate}}</em> {{student.name}}</p>-->
 	<p><em>{{"student.price_colon" | translate}}</em> {{student.price | currency}}</p>
+	<p><em>{{"student.startBilling_colon" | translate}}</em> {{student.startBillingReadable}}</p>
 	<div padding>
 		<button block secondary (click)="edit()">{{"student.edit" | translate}}</button>
 	</div>
