--- a/app/pages/forms/student.html
+++ b/app/pages/forms/student.html
@@ -18,10 +18,14 @@
 				<ion-label>{{"student.price" | translate}}</ion-label>
 				<ion-input type="number" min="0" [(ngModel)]="student.price" required></ion-input>
 			</ion-item>
+			<ion-item>
+				<ion-label>{{"student.startBilling" | translate}}</ion-label>
+				<ion-input type="date" [(ngModel)]="student.startBilling" required></ion-input>
+			</ion-item>
 		</ion-list>
 
 		<div padding>
-			<button block primary type="submit" [disabled]="updating">{{ (edit ? "lesson.validateEdit" : "lesson.validateAdd") | translate}}</button>
+			<button block primary type="submit" [disabled]="loading">{{ (edit ? "lesson.validateEdit" : "lesson.validateAdd") | translate}}</button>
 		</div>
 	</form>
 
