removed total paid amount and start billing text, replace by a payment history and started to implement a check to find until which date a given student paid.

--- a/app/pages/students/student-detail.html
+++ b/app/pages/students/student-detail.html
@@ -13,9 +13,18 @@
 
 	<!--<p><em>{{"student.name_colon" | translate}}</em> {{student.name}}</p>-->
 	<p><em>{{"student.price_colon" | translate}}</em> {{student.price | currency}}</p>
-	<p><em>{{"student.startBilling_colon" | translate}}</em> {{student.startBillingReadable}}</p>
+	<!--<p><em>{{"student.startBilling_colon" | translate}}</em> {{student.startBillingReadable}}</p>-->
+	<!--<p><em>{{"student.paid_colon" | translate}}</em> {{student.paid | currency}}</p>-->
+	<p><em>{{"student.paidUntil_colon" | translate}}</em> {{student.paidUntilReadable}}</p>
+
+	<div padding>
+		<button block primary (click)="addPayment()">{{"pay.title" | translate}}</button>
+	</div>
 	<div padding>
 		<button block secondary (click)="edit()">{{"student.edit" | translate}}</button>
+	</div>
+	<div padding>
+		<button block secondary (click)="checkPayment()">{{"pay.checkPayment" | translate}}</button>
 	</div>
 
 </ion-content>
