--- a/app/pages/forms/student.html
+++ b/app/pages/forms/student.html
@@ -18,10 +18,14 @@
 				<ion-label>{{"student.price" | translate}}</ion-label>
 				<ion-input type="number" min="0" [(ngModel)]="student.price" required></ion-input>
 			</ion-item>
-			<ion-item>
+			<!--<ion-item>
+				<ion-label>{{"student.paid" | translate}}</ion-label>
+				<ion-input type="number" min="0" [(ngModel)]="student.paid" required></ion-input>
+			</ion-item>-->
+			<!--<ion-item>
 				<ion-label>{{"student.startBilling" | translate}}</ion-label>
 				<ion-input type="date" [(ngModel)]="student.startBilling" required></ion-input>
-			</ion-item>
+			</ion-item>-->
 		</ion-list>
 
 		<div padding>
