Fixed email verification logic, add an icon when the email is not verified yet.

--- a/app/pages/forms/change-password.html
+++ b/app/pages/forms/change-password.html
@@ -32,10 +32,10 @@
 				"auth.signup" : "auth.validateChange") | translate }}
 			</button>
 		</div>
-		<div padding *ngIf="password.isTemporaryPassword">
+		<!--<div padding *ngIf="password.isTemporaryPassword">
 			<button block secondary (click)="resendPassword()" type="button" [disabled]="loading">{{ "auth.resendPassword" | translate }}
 			</button>
-		</div>
+		</div>-->
 	</form>
 
 </ion-content>
