--- a/app/pages/agenda/agenda.html
+++ b/app/pages/agenda/agenda.html
@@ -4,6 +4,9 @@
 	</button>
 	<ion-title><ion-input type="date" [(ngModel)]="currentDate"></ion-input></ion-title>
 	<ion-buttons end>
+		<button *ngIf="emailVerified === false" (click)="verifyPasswordWarning($event)">
+			<ion-icon name="warning"></ion-icon>
+		</button>
 		<button (click)="popAddList($event)">
 			<ion-icon name="add"></ion-icon>
 		</button>
