--- a/app/pages/pop/auth.html
+++ b/app/pages/pop/auth.html
@@ -21,16 +21,23 @@
 
 <ion-content class="lesson-form">
 
-	<form *ngIf="signUpMode !== 'forgot'" #loginCreds="ngForm" (submit)="loginWithEmail(loginCreds.value)">
+	<form *ngIf="signUpMode !== 'forgot'" [ngFormModel]="loginCreds" (submit)="loginWithEmail(loginCreds.value)">
 		<ion-list>
 			<ion-item>
 				<ion-label>{{ "auth.email" | translate }}</ion-label>
 				<ion-input type="email" required ngControl="email"></ion-input>
 			</ion-item>
 			<ion-item>
-				<ion-label *ngIf="!signUpMode">{{ "auth.password" | translate }}</ion-label>
-				<ion-input *ngIf="!signUpMode" type="password" required ngControl="password"></ion-input>
+				<ion-label>{{ "auth.password" | translate }}</ion-label>
+				<ion-input type="password" required ngControl="password"></ion-input>
 			</ion-item>
+			<ion-item>
+				<ion-label *ngIf="signUpMode === 'signup'">{{ "auth.confirmPassword" | translate }}</ion-label>
+				<ion-input *ngIf="signUpMode === 'signup'" type="password" ngControl="confirmPassword" required></ion-input>
+			</ion-item>
+			<div class="item error" *ngIf="loginCreds.hasError('differentPasswords') && loginCreds.controls['confirmPassword'].value">
+				{{ "auth.differentPasswords" | translate }}
+			</div>
 		</ion-list>
 		<div padding>
 			<button block primary type="submit" [disabled]="loading || !loginCreds.valid">{{ (signUpMode ? "auth.signup" :
