--- a/app/pages/forms/change-password.html
+++ b/app/pages/forms/change-password.html
@@ -1,9 +1,11 @@
-<ion-navbar *navbar>
-	<ion-title>{{ "auth.changePassword" | translate }}</ion-title>
-	<ion-buttons end>
-		<ion-spinner *ngIf="loading"></ion-spinner>
-	</ion-buttons>
-</ion-navbar>
+<ion-header>
+	<ion-navbar>
+		<ion-title>{{ "auth.changePassword" | translate }}</ion-title>
+		<ion-buttons end>
+			<ion-spinner *ngIf="loading"></ion-spinner>
+		</ion-buttons>
+	</ion-navbar>
+</ion-header>
 
 <ion-content>
 
