--- a/app/pages/forms/lesson.html
+++ b/app/pages/forms/lesson.html
@@ -1,10 +1,11 @@
-<ion-navbar *navbar>
-	<button menuToggle>
-		<ion-icon name="menu"></ion-icon>
-	</button>
-	<ion-title>{{ (edit ? "lesson.edit" : "lesson.add") | translate }}</ion-title>
-</ion-navbar>
-
+<ion-header>
+	<ion-navbar>
+		<button menuToggle>
+			<ion-icon name="menu"></ion-icon>
+		</button>
+		<ion-title>{{ (edit ? "lesson.edit" : "lesson.add") | translate }}</ion-title>
+	</ion-navbar>
+</ion-header>
 
 <ion-content class="lesson-form">
 
