--- a/app/pages/forms/pay.html
+++ b/app/pages/forms/pay.html
@@ -1,10 +1,11 @@
-<ion-navbar *navbar>
-	<button menuToggle>
-		<ion-icon name="menu"></ion-icon>
-	</button>
-	<ion-title>{{ "pay.title" | translate }}</ion-title>
-</ion-navbar>
-
+<ion-header>
+	<ion-navbar>
+		<button menuToggle>
+			<ion-icon name="menu"></ion-icon>
+		</button>
+		<ion-title>{{ "pay.title" | translate }}</ion-title>
+	</ion-navbar>
+</ion-header>
 
 <ion-content>
 
