--- a/app/pages/forms/student.html
+++ b/app/pages/forms/student.html
@@ -1,10 +1,11 @@
-<ion-navbar *navbar>
-	<button menuToggle>
-		<ion-icon name="menu"></ion-icon>
-	</button>
-	<ion-title>{{ (edit ? "student.edit" : "student.add") | translate }}</ion-title>
-</ion-navbar>
-
+<ion-header>
+	<ion-navbar>
+		<button menuToggle>
+			<ion-icon name="menu"></ion-icon>
+		</button>
+		<ion-title>{{ (edit ? "student.edit" : "student.add") | translate }}</ion-title>
+	</ion-navbar>
+</ion-header>
 
 <ion-content class="student-form">
 
