--- a/app/pages/students/student-detail.html
+++ b/app/pages/students/student-detail.html
@@ -1,13 +1,14 @@
-<ion-navbar *navbar>
-	<button menuToggle>
-		<ion-icon name="menu"></ion-icon>
-	</button>
-	<ion-title>{{student.name}}</ion-title>
-	<ion-buttons end>
-		<button (click)="remove()">{{"agenda.remove" | translate}}</button>
-	</ion-buttons>
-</ion-navbar>
-
+<ion-header>
+	<ion-navbar>
+		<button menuToggle>
+			<ion-icon name="menu"></ion-icon>
+		</button>
+		<ion-title>{{student.name}}</ion-title>
+		<ion-buttons end>
+			<button (click)="remove()">{{"agenda.remove" | translate}}</button>
+		</ion-buttons>
+	</ion-navbar>
+</ion-header>
 
 <ion-content padding class="student">
 
